# attackmap-analyzer-iac

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
src/attackmap_analyzer_iac/: __init__.py  analyzer.py
tests/: test_iac_analyzer.py
tests/fixtures/pds_like_repo/: .env.example  Dockerfile  compose.yaml  installer.sh
tests/fixtures/pds_like_repo/.github/workflows/: build-and-push-ghcr.yaml
